[gd_scene load_steps=39 format=2]

[ext_resource path="res://assets/fonts/minecraftia/Minecraftia-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/puzzle_images/tomato.png" type="Texture" id=2]
[ext_resource path="res://script/Correct.gd" type="Script" id=3]
[ext_resource path="res://assets/success/Banner.png" type="Texture" id=4]
[ext_resource path="res://assets/ui/star_animated/Star0190.png" type="Texture" id=5]
[ext_resource path="res://assets/ui/star_animated/Star0200.png" type="Texture" id=6]
[ext_resource path="res://assets/ui/star_animated/Star0210.png" type="Texture" id=7]
[ext_resource path="res://assets/ui/star_animated/Star0220.png" type="Texture" id=8]
[ext_resource path="res://assets/ui/star_animated/Star0020.png" type="Texture" id=9]
[ext_resource path="res://assets/ui/star_animated/Star0150.png" type="Texture" id=10]
[ext_resource path="res://assets/ui/star_animated/Star0130.png" type="Texture" id=11]
[ext_resource path="res://assets/ui/star_animated/Star0050.png" type="Texture" id=12]
[ext_resource path="res://assets/ui/star_animated/Star0000.png" type="Texture" id=13]
[ext_resource path="res://assets/ui/star_animated/Star0230.png" type="Texture" id=14]
[ext_resource path="res://assets/ui/star_animated/Star0240.png" type="Texture" id=15]
[ext_resource path="res://assets/ui/star_animated/Star0250.png" type="Texture" id=16]
[ext_resource path="res://assets/ui/star_animated/Star0270.png" type="Texture" id=17]
[ext_resource path="res://assets/ui/star_animated/Star0280.png" type="Texture" id=18]
[ext_resource path="res://assets/ui/star_animated/Star0290.png" type="Texture" id=19]
[ext_resource path="res://assets/ui/star_animated/Star0040.png" type="Texture" id=20]
[ext_resource path="res://assets/ui/star_animated/Star0070.png" type="Texture" id=21]
[ext_resource path="res://assets/ui/star_animated/Star0080.png" type="Texture" id=22]
[ext_resource path="res://assets/ui/star_animated/Star0100.png" type="Texture" id=23]
[ext_resource path="res://assets/ui/star_animated/Star0120.png" type="Texture" id=24]
[ext_resource path="res://assets/ui/star_animated/Star0160.png" type="Texture" id=25]
[ext_resource path="res://assets/ui/star_animated/Star0170.png" type="Texture" id=26]
[ext_resource path="res://assets/ui/star_animated/Star0180.png" type="Texture" id=27]
[ext_resource path="res://assets/ui/star_animated/Star0260.png" type="Texture" id=28]
[ext_resource path="res://assets/ui/star_animated/Star0090.png" type="Texture" id=29]
[ext_resource path="res://assets/ui/star_animated/Star0010.png" type="Texture" id=30]
[ext_resource path="res://assets/ui/star_animated/Star0060.png" type="Texture" id=31]
[ext_resource path="res://assets/ui/star_animated/Star0110.png" type="Texture" id=32]
[ext_resource path="res://assets/ui/star_animated/Star0140.png" type="Texture" id=33]
[ext_resource path="res://assets/ui/star_animated/Star0030.png" type="Texture" id=34]
[ext_resource path="res://assets/audio/sfx/star_ver_1.mp3" type="AudioStream" id=35]
[ext_resource path="res://assets/ui/buttons_bangla/next_btn.png" type="Texture" id=36]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 1 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 13 ), ExtResource( 30 ), ExtResource( 9 ), ExtResource( 34 ), ExtResource( 20 ), ExtResource( 12 ), ExtResource( 31 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 29 ), ExtResource( 23 ), ExtResource( 32 ), ExtResource( 24 ), ExtResource( 11 ), ExtResource( 33 ), ExtResource( 10 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 28 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ) ],
"loop": false,
"name": "spin",
"speed": 100.0
} ]

[node name="Correct" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1080.0
margin_bottom = 1920.0
grow_horizontal = 2
grow_vertical = 2
color = Color( 0.301961, 0.498039, 0.866667, 1 )

[node name="ShowImage" type="TextureRect" parent="."]
margin_left = 257.0
margin_top = 113.0
margin_right = 857.0
margin_bottom = 713.0
rect_min_size = Vector2( 600, 600 )
texture = ExtResource( 2 )
expand = true

[node name="PanelContainer" type="PanelContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 256.0
margin_top = 62.0
margin_right = 829.0
margin_bottom = 635.0

[node name="CorrectBanner" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 84.0
margin_top = 787.0
margin_right = -76.0
margin_bottom = -857.0
texture = ExtResource( 4 )
expand = true

[node name="PointsLabel" type="Label" parent="CorrectBanner"]
margin_left = 344.0
margin_top = 22.0
margin_right = 569.0
margin_bottom = 160.0
custom_colors/font_color = Color( 0.32549, 0.160784, 0.160784, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "100"
align = 1

[node name="NextBtn" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -269.0
margin_top = 604.0
margin_right = 281.0
margin_bottom = 804.0
texture_normal = ExtResource( 36 )

[node name="Star1" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 213, 1292 )
scale = Vector2( 4, 4 )
frames = SubResource( 3 )
animation = "spin"

[node name="Star2" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 549, 1189 )
scale = Vector2( 4, 4 )
frames = SubResource( 3 )
animation = "spin"

[node name="Star3" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 894, 1290 )
scale = Vector2( 4, 4 )
frames = SubResource( 3 )
animation = "spin"

[node name="Tween" type="Tween" parent="."]

[node name="StarSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 35 )

[connection signal="pressed" from="NextBtn" to="." method="_on_NextBtn_pressed"]
